@@ -21,11 +21,10 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
 
     /**
-     * Read CSV file for a given file path
-     * Note: csv default delimiter character is `;`
-     *
      * @param path file path
      * @throws IOException If unable to open the file
+     * @brief Read CSV file for a given file path
+     * @details Note: csv default delimiter character is `;`
      */
     public DataFrame(Path path, Character csvDelimiter, Class<H> classParameterH, Class<T> classParameterT) throws IOException {
         this.classParameterT = classParameterT;
@@ -61,21 +60,19 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
     }
 
     /**
-     * Read CSV file for a given file path
-     * Note: csv default delimiter character is `;`
-     *
      * @param path file path
      * @throws IOException If unable to open the file
+     * @brief Read CSV file for a given file path
+     * @details Note: csv default delimiter character is `;`
      */
     public DataFrame(Path path, Class<H> classParameterH, Class<T> classParameterT) throws IOException {
         this(path, ';', classParameterH, classParameterT);
     }
 
     /**
-     * Build a DataFrame from header and rows
-     *
      * @param header list of header to declare
      * @param rows   list of rows to declare
+     * @brief Build a DataFrame from header and rows
      */
     public DataFrame(List<H> header, List<List<T>> rows, Class<H> classParameterH, Class<T> classParameterT) {
         this.classParameterT = classParameterT;
@@ -94,10 +91,9 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
 
     /**
-     * Build a DataFrame from content Map and indexes
-     *
      * @param content Data frame content shaped has a map
      * @param indexes Data frame indexes
+     * @brief Build a DataFrame from content Map and indexes
      */
     public DataFrame(HashMap<H, List<T>> content, Integer[] indexes, Class<H> classParameterH, Class<T> classParameterT) {
         this.classParameterT = classParameterT;
@@ -107,9 +103,8 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
     }
 
     /**
-     * Build a DataFrame from content Map
-     *
      * @param content Data frame content shaped has a map
+     * @brief Build a DataFrame from content Map
      */
     public DataFrame(HashMap<H, List<T>> content, Class<H> classParameterH, Class<T> classParameterT) {
         this.classParameterT = classParameterT;
@@ -117,22 +112,44 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         this.setContent(content);
     }
 
+    /**
+     * @return indexes array
+     * @brief Getter for the DataFrame index array
+     */
     public Integer[] getIndexes() {
         return indexes;
     }
 
+    /**
+     * @param indexes array
+     * @brief Setter for the DataFrame index array
+     */
     public void setIndexes(Integer[] indexes) {
         this.indexes = indexes;
     }
 
+    /**
+     * @return map of element by column header
+     * @brief Getter for the DataFrame content map
+     */
     public HashMap<H, List<T>> getContent() {
         return content;
     }
 
+    /**
+     * @param content map of element by column header
+     * @brief Setter for the DataFrame Content map
+     */
     public void setContent(HashMap<H, List<T>> content) {
         this.content = content;
     }
 
+    /**
+     * @param indexes to filter on
+     * @return selected DataFrame
+     * @throws Exception Bad index selection
+     * @brief Select a part of the current DataFrame by using indexes and return a new DataFrame
+     */
     public DataFrame<H, T> selectDataFrameByIndex(Integer[] indexes) throws Exception {
         checkIndexInput(indexes);
         HashMap<H, List<T>> content = new HashMap<>(this.getContent().entrySet().stream()
@@ -148,6 +165,12 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         return new DataFrame<>(content, indexes, classParameterH, classParameterT);
     }
 
+    /**
+     * @param columns to filter on
+     * @return selected DataFrame
+     * @throws Exception Bad column selection
+     * @brief Select a part of the current DataFrame by using columns and return a new DataFrame
+     */
     public DataFrame<H, T> selectDataFrameByColumn(List<H> columns) throws Exception {
         checkHeaderInput(columns);
         HashMap<H, List<T>> content = new HashMap<>(this.getContent().entrySet().stream()
@@ -160,26 +183,32 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
     }
 
-    //here
     /**
-     * Display the DataFrame in a well-aligned table format, including predefined indices if available.
-     *
      * @return String representing the DataFrame in a table format.
+     * @brief Display the DataFrame in a well-aligned table format, including predefined indices if available.
+     * @details <pre>Example of result:
+     * +---+----+----+
+     * |   | a  | c  |
+     * +---+----+----+
+     * | 1 | 10 | 30 |
+     * +---+----+----+
+     * | 2 | 15 | 35 |
+     * +---+----+----+</pre>
      */
     public String toStringDisplay() {
         // Calculate the maximum width for each column based on header and data
         Map<H, Integer> columnWidths = new HashMap<>();
-        for (H header : this.content.keySet()) {
+        for (H header : this.getContent().keySet()) {
             int maxWidth = header.toString().length(); // Start with the header's length
-            for (T value : this.content.get(header)) {
+            for (T value : this.getContent().get(header)) {
                 maxWidth = Math.max(maxWidth, value != null ? value.toString().length() : 0);
             }
             columnWidths.put(header, maxWidth);
         }
 
         StringBuilder builder = new StringBuilder();
-        boolean hasIndex = this.indexes != null && this.indexes.length > 0;
-        int indexWidth = hasIndex ? Arrays.stream(this.indexes).map(Object::toString).max(Comparator.comparingInt(String::length)).orElse("").length() : 0;
+        boolean hasIndex = hasIndex();
+        int indexWidth = hasIndex ? Arrays.stream(this.getIndexes()).map(Object::toString).max(Comparator.comparingInt(String::length)).orElse("").length() : 0;
 
         // Build the table delimiter with or without index
         buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
@@ -189,21 +218,21 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         if (hasIndex) {
             builder.append(String.format(" %-" + indexWidth + "s |", ""));
         }
-        for (H header : this.content.keySet()) {
+        for (H header : this.getContent().keySet()) {
             builder.append(String.format(" %-" + columnWidths.get(header) + "s |", header));
         }
         builder.append(System.lineSeparator());
         buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
 
         // Data rows
-        int numberOfRows = this.content.values().iterator().next().size();
+        int numberOfRows = this.getContent().values().iterator().next().size();
         for (int i = 0; i < numberOfRows; i++) {
             builder.append("|");
             if (hasIndex) {
-                builder.append(String.format(" %-" + indexWidth + "s |", this.indexes[i]));
+                builder.append(String.format(" %-" + indexWidth + "s |", this.getIndexes()[i]));
             }
-            for (H header : this.content.keySet()) {
-                List<T> column = this.content.get(header);
+            for (H header : this.getContent().keySet()) {
+                List<T> column = this.getContent().get(header);
                 String value = column.size() > i && column.get(i) != null ? column.get(i).toString() : "";
                 builder.append(String.format(" %-" + columnWidths.get(header) + "s |", value));
             }
@@ -215,12 +244,11 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
     }
 
     /**
-     * Builds the delimiter line for the table based on column widths, including index if exists.
-     *
      * @param builder      StringBuilder to which the delimiter line is appended.
      * @param columnWidths Map with the widths for each column.
      * @param indexWidth   Width of the index column, if indices are used.
      * @param hasIndex     Boolean indicating if indices are present.
+     * @brief Builds the delimiter line for the table based on column widths, including index if exists.
      */
     private void buildTableDelimiter(StringBuilder builder, Map<H, Integer> columnWidths, int indexWidth, boolean hasIndex) {
         builder.append("+");
@@ -232,152 +260,212 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         }
         builder.append(System.lineSeparator());
     }
+
     /**
-     * Display in a table the given dataframe for the given indexes
-     * Example of result:
-     * ------------------
-     * |    a   |   b   |
-     * ------------------
-     * |    1   |   2   |
-     * ------------------
-     * |    5   |   9   |
-     * ------------------
-     *
      * @return String result to display
+     * @brief Display in a table the given dataframe for the given indexes
+     * @details <pre>Example of result:
+     * +---+----+----+
+     * |   | a  | c  |
+     * +---+----+----+
+     * | 1 | 10 | 30 |
+     * +---+----+----+
+     * | 2 | 15 | 35 |
+     * +---+----+----+</pre>
      */
     public String toStringDisplayByIndex(Integer[] indexes) throws Exception {
         checkIndexInput(indexes);
-        HashMap<H, List<T>> inputArray = this.getContent();
-        StringBuilder builder = new StringBuilder();
+        // Calculate the maximum width for each column based on header and data
+        Map<H, Integer> columnWidths = new HashMap<>();
+        int numberOfRows = this.getContent().values().iterator().next().size();
+        Integer index;
+        for (H header : this.getContent().keySet()) {
+            int maxWidth = header.toString().length(); // Start with the header's length
+            List<T> column = this.getContent().get(header);
+            for (int i = 0; i < numberOfRows; i++) {
+                index = retrieveIndexWhenAtDataFramePosition(indexes, i);
+                if (index != null) {
+                    maxWidth = Math.max(maxWidth, column.get(i) != null ? column.get(i).toString().length() : 0);
+                }
+            }
+            columnWidths.put(header, maxWidth);
+        }
 
-        // Size + 1 since we count the Index column too
-        int size = inputArray.keySet().size() + 1;
-        buildTableDelimiter(builder, size);
-        builder.append("|\t \t|");
-        for (H inputKey : inputArray.keySet()) {
-            builder.append("\t").append(inputKey).append("\t|");
+        StringBuilder builder = new StringBuilder();
+        int indexWidth = getIndexWidth();
+        buildTableDelimiter(builder, columnWidths, indexWidth, true);
+
+        builder.append("|").append(String.format(" %-" + indexWidth + "s |", ""));
+        for (H header : this.getContent().keySet()) {
+            builder.append(String.format(" %-" + columnWidths.get(header) + "s |", header));
         }
 
         builder.append(System.lineSeparator());
-        buildTableDelimiter(builder, size);
-        Integer index;
-        for (int i = 0; i < inputArray.values().stream().max(Comparator.comparing(List::size)).map(List::size).orElse(0); i++) {
+        // Build the table delimiter with or without index
+        buildTableDelimiter(builder, columnWidths, indexWidth, true);
+
+        for (int i = 0; i < numberOfRows; i++) {
             index = retrieveIndexWhenAtDataFramePosition(indexes, i);
             if (index != null) {
-                builder.append("|\t").append(index).append("\t|");
-                for (H inputKey : inputArray.keySet()) {
-                    builder.append("\t").append(inputArray.get(inputKey).size() > i ? inputArray.get(inputKey).get(i).toString() : " ").append("\t|");
+                builder.append("|").append(String.format(" %-" + indexWidth + "s |", this.getIndexes()[i]));
+                for (H header : this.getContent().keySet()) {
+                    List<T> column = this.getContent().get(header);
+                    String value = column.size() > i && column.get(i) != null ? column.get(i).toString() : "";
+                    builder.append(String.format(" %-" + columnWidths.get(header) + "s |", value));
                 }
                 builder.append(System.lineSeparator());
-                buildTableDelimiter(builder, size);
+                buildTableDelimiter(builder, columnWidths, indexWidth, true);
             }
         }
         return builder.toString();
     }
 
     /**
-     * Display in a table the given dataframe for the given indexes
-     * Example of result:
-     * ------------------
-     * |    a   |   b   |
-     * ------------------
-     * |    1   |   2   |
-     * ------------------
-     * |    5   |   9   |
-     * ------------------
-     *
-     * @return String result to display
+     * @return max index string length
+     * @brief Retrieve max the String length of the current index
      */
-    public String toStringDisplayByHeader(List<H> header) throws Exception {
-        checkHeaderInput(header);
-        HashMap<H, List<T>> inputArray = this.getContent();
-        StringBuilder builder = new StringBuilder();
+    private int getIndexWidth() {
+        return Arrays.stream(this.getIndexes()).map(Object::toString).max(Comparator.comparingInt(String::length)).orElse("").length();
+    }
 
-        // Size + 1 since we count the Index column too
-        int size = hasIndex() ? header.size() + 1 : header.size();
-        buildTableDelimiter(builder, size);
-        builder.append("|");
-        if (hasIndex())
-            builder.append("\t \t|");
-        for (H inputKey : header) {
-            builder.append("\t").append(inputKey).append("\t|");
+    /**
+     * @return String result to display
+     * @brief Display in a table the given dataframe for the given indexes
+     * @details <pre>Example of result:
+     * +---+----+----+
+     * |   | a  | c  |
+     * +---+----+----+
+     * | 1 | 10 | 30 |
+     * +---+----+----+
+     * | 2 | 15 | 35 |
+     * +---+----+----+</pre>
+     */
+    public String toStringDisplayByHeader(List<H> columnFilter) throws Exception {
+        checkHeaderInput(columnFilter);
+        // Calculate the maximum width for each column based on header and data
+        Map<H, Integer> columnWidths = new HashMap<>();
+        for (H header : columnFilter) {
+            int maxWidth = header.toString().length(); // Start with the header's length
+            for (T value : this.getContent().get(header)) {
+                maxWidth = Math.max(maxWidth, value != null ? value.toString().length() : 0);
+            }
+            columnWidths.put(header, maxWidth);
         }
 
+        StringBuilder builder = new StringBuilder();
+        boolean hasIndex = hasIndex();
+        int indexWidth = hasIndex ? getIndexWidth() : 0;
+
+        // Build the table delimiter with or without index
+        buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
+
+        // Header row
+        builder.append("|");
+        if (hasIndex) {
+            builder.append(String.format(" %-" + indexWidth + "s |", ""));
+        }
+        for (H header : columnFilter) {
+            builder.append(String.format(" %-" + columnWidths.get(header) + "s |", header));
+        }
         builder.append(System.lineSeparator());
-        buildTableDelimiter(builder, size);
-        Integer index;
-        for (int i = 0; i < inputArray.values().stream().max(Comparator.comparing(List::size)).map(List::size).orElse(0); i++) {
+        buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
+
+        // Data rows
+        int numberOfRows = this.getContent().values().iterator().next().size();
+        for (int i = 0; i < numberOfRows; i++) {
             builder.append("|");
-            if (hasIndex()) {
-                index = this.getIndexes()[i];
-                builder.append("\t").append(index).append("\t|");
+            if (hasIndex) {
+                builder.append(String.format(" %-" + indexWidth + "s |", this.getIndexes()[i]));
             }
-            for (H inputKey : header) {
-                builder.append("\t").append(inputArray.get(inputKey).size() > i ? inputArray.get(inputKey).get(i).toString() : " ").append("\t|");
+            for (H header : columnFilter) {
+                List<T> column = this.getContent().get(header);
+                String value = column.size() > i && column.get(i) != null ? column.get(i).toString() : "";
+                builder.append(String.format(" %-" + columnWidths.get(header) + "s |", value));
             }
             builder.append(System.lineSeparator());
-            buildTableDelimiter(builder, size);
+            buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
         }
+
         return builder.toString();
     }
 
     /**
-     * Display in a table the given dataframe
-     * Example of result:
-     * ------------------
-     * |    a   |   b   |
-     * ------------------
-     * |    1   |   2   |
-     * ------------------
-     * |    5   |   9   |
-     * ------------------
-     *
      * @param nbLines number of lines to display
      * @param mode    true = first n lines // false = last n lines
      * @return String result to display
+     * @brief Display in a table the given dataframe
+     * @details <pre>Example of result:
+     * +---+----+----+
+     * |   | a  | c  |
+     * +---+----+----+
+     * | 1 | 10 | 30 |
+     * +---+----+----+
+     * | 2 | 15 | 35 |
+     * +---+----+----+</pre>
      */
     public String toStringPartialDisplay(int nbLines, boolean mode) {
         if (nbLines < 0)
             nbLines = 0;
         HashMap<H, List<T>> inputArray = this.getContent();
-        StringBuilder builder = new StringBuilder();
-
-        // Size + 1 if we need to count the Index column
-        int size = hasIndex() ? inputArray.keySet().size() + 1 : inputArray.keySet().size();
-        buildTableDelimiter(builder, size);
-        builder.append("|");
-        if (hasIndex())
-            builder.append("\t \t|");
-
-        for (H inputKey : inputArray.keySet()) {
-            builder.append("\t").append(inputKey).append("\t|");
-        }
-
-        builder.append(System.lineSeparator());
-        buildTableDelimiter(builder, size);
-        Integer index;
         int maxElement = mode ? nbLines : inputArray.values().stream().max(Comparator.comparing(List::size)).map(List::size).orElse(0);
         int initialValue = mode ? 0 : Math.max(0, inputArray.values().stream().max(Comparator.comparing(List::size)).map(List::size).orElse(0) - nbLines);
+        // Calculate the maximum width for each column based on header and data
+        Map<H, Integer> columnWidths = new HashMap<>();
+        for (H header : this.getContent().keySet()) {
+            int maxWidth = header.toString().length(); // Start with the header's length
+            List<T> column = this.getContent().get(header);
+            for (int i = initialValue; i < maxElement; i++) {
+                maxWidth = Math.max(maxWidth, column.get(i) != null ? column.get(i).toString().length() : 0);
+            }
+            columnWidths.put(header, maxWidth);
+        }
+
+        StringBuilder builder = new StringBuilder();
+        boolean hasIndex = hasIndex();
+        int indexWidth = hasIndex ? getIndexWidth() : 0;
+
+        // Build the table delimiter with or without index
+        buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
+
+        // Header row
+        builder.append("|");
+        if (hasIndex) {
+            builder.append(String.format(" %-" + indexWidth + "s |", ""));
+        }
+        for (H header : this.getContent().keySet()) {
+            builder.append(String.format(" %-" + columnWidths.get(header) + "s |", header));
+        }
+        builder.append(System.lineSeparator());
+        buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
         for (int i = initialValue; i < maxElement; i++) {
             builder.append("|");
-            if (hasIndex()) {
-                index = this.getIndexes()[i];
-                builder.append("\t").append(index).append("\t|");
+            if (hasIndex) {
+                builder.append(String.format(" %-" + indexWidth + "s |", this.getIndexes()[i]));
             }
-
-            for (H inputKey : inputArray.keySet()) {
-                builder.append("\t").append(inputArray.get(inputKey).size() > i ? inputArray.get(inputKey).get(i).toString() : " ").append("\t|");
+            for (H header : this.getContent().keySet()) {
+                List<T> column = this.getContent().get(header);
+                String value = column.size() > i && column.get(i) != null ? column.get(i).toString() : "";
+                builder.append(String.format(" %-" + columnWidths.get(header) + "s |", value));
             }
             builder.append(System.lineSeparator());
-            buildTableDelimiter(builder, size);
+            buildTableDelimiter(builder, columnWidths, indexWidth, hasIndex);
         }
         return builder.toString();
     }
 
+    /**
+     * @return true if the index array isn't null nor empty
+     * @brief Check if the current DataFrame index are initialised
+     */
     public boolean hasIndex() {
         return this.getIndexes() != null && this.getIndexes().length > 0;
     }
 
+    /**
+     * @param indexes array to check
+     * @throws Exception check failed with reason
+     * @brief Run a checklist to verify the array of index compare to the saved index array
+     */
     private void checkIndexInput(Integer[] indexes) throws Exception {
         if (indexes == null) throw new Exception("Given index can't be null");
         if (indexes.length == 0) throw new Exception("Given index can't be empty");
@@ -391,6 +479,11 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         }
     }
 
+    /**
+     * @param header list to check
+     * @throws Exception check failed with reason
+     * @brief Run a checklist to verify the list of header compare to the saved header
+     */
     private void checkHeaderInput(List<H> header) throws Exception {
         if (header == null) throw new Exception("Given header can't be null");
         if (header.isEmpty()) throw new Exception("Given header can't be empty");
@@ -402,22 +495,17 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
             throw new Exception("Not existing header value given");
     }
 
+    /**
+     * @param indexes list of index
+     * @param i       current position
+     * @return found index at position, null otherwise
+     * @brief Get index at referenced position
+     */
     private Integer retrieveIndexWhenAtDataFramePosition(Integer[] indexes, int i) {
         for (Integer index : indexes) {
             if (ArrayUtils.indexOf(this.getIndexes(), index) == i) return index;
         }
         return null;
-    }
-
-    /**
-     * Add delimitation between each row
-     *
-     * @param builder String builder of the current table display
-     * @param size    number of spaces to add
-     */
-    private void buildTableDelimiter(StringBuilder builder, int size) {
-        builder.append("--------".repeat(Math.max(0, size)));
-        builder.append(System.lineSeparator());
     }
 
     @SuppressWarnings("unchecked")
@@ -456,11 +544,13 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
             throw new IllegalArgumentException("Bad type.");
         }
     }
+
     /**
-     * Calculate sum of a column
+     * @param header selected column
+     * @brief Calculate sum of a column
      */
     public double sum(H header) {
-        return this.content.get(header).stream()
+        return this.getContent().get(header).stream()
                 .filter(Objects::nonNull)  // Filtre pour ignorer les valeurs null
                 .mapToDouble(Number::doubleValue)
                 .sum();
@@ -468,10 +558,11 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
 
     /**
-     * Calculate average of a column
+     * @param header selected column
+     * @brief Calculate average of a column
      */
     public double average(H header) {
-        return this.content.get(header).stream()
+        return this.getContent().get(header).stream()
                 .filter(Objects::nonNull)  // Filtre pour ignorer les valeurs null
                 .mapToDouble(Number::doubleValue)
                 .average()
@@ -480,28 +571,30 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
 
     /**
-     * Find minimum value in a column
+     * @param header selected column
+     * @brief Find minimum value in a column
      */
     public T min(H header) {
-        return this.content.get(header).stream()
+        return this.getContent().get(header).stream()
                 .min(Comparator.naturalOrder())
                 .orElse(null);  // Retourne null si la colonne est vide
     }
 
     /**
-     * Find maximum value in a column
+     * @param header selected column
+     * @brief Find maximum value in a column
      */
     public T max(H header) {
-        return this.content.get(header).stream()
+        return this.getContent().get(header).stream()
                 .max(Comparator.naturalOrder())
                 .orElse(null);  // Retourne null si la colonne est vide
     }
+
     /**
-     * Advanced selection based on custom predicates per column that filters entire rows.
-     *
      * @param criteria Map of headers to their respective predicates for selection.
      * @return A new DataFrame with only the rows that match all the criteria for any mentioned column.
      * @throws Exception If there are issues with the headers.
+     * @brief Advanced selection based on custom predicates per column that filters entire rows.
      */
     public DataFrame<H, T> selectAdvanced(Map<H, Predicate<T>> criteria) throws Exception {
         if (criteria == null || criteria.isEmpty()) {
@@ -510,20 +603,20 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
 
         // Check for invalid headers
         for (H header : criteria.keySet()) {
-            if (!this.content.containsKey(header)) {
+            if (!this.getContent().containsKey(header)) {
                 throw new Exception("Header not found in DataFrame: " + header);
             }
         }
 
         // Create a list of all headers for index reference
-        List<H> allHeaders = new ArrayList<>(this.content.keySet());
+        List<H> allHeaders = new ArrayList<>(this.getContent().keySet());
 
         // Prepare to collect indexes of rows that match all criteria
         Set<Integer> validRowIndexes = new HashSet<>();
-        for (int i = 0; i < this.content.get(allHeaders.get(0)).size(); i++) {
+        for (int i = 0; i < this.getContent().get(allHeaders.getFirst()).size(); i++) {
             final int rowIndex = i;
             boolean rowMatches = allHeaders.stream()
-                    .allMatch(header -> criteria.getOrDefault(header, val -> true).test(this.content.get(header).get(rowIndex)));
+                    .allMatch(header -> criteria.getOrDefault(header, val -> true).test(this.getContent().get(header).get(rowIndex)));
             if (rowMatches) {
                 validRowIndexes.add(rowIndex);
             }
@@ -532,7 +625,7 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         // Build new content map with only the valid rows
         HashMap<H, List<T>> filteredContent = new HashMap<>();
         for (H header : allHeaders) {
-            List<T> originalList = this.content.get(header);
+            List<T> originalList = this.getContent().get(header);
             List<T> filteredList = validRowIndexes.stream()
                     .map(originalList::get)
                     .collect(Collectors.toList());
@@ -540,12 +633,11 @@ public class DataFrame<H, T extends Number & Comparable<T>> {
         }
 
         // Adjust indexes if they are used in the original DataFrame
-        if (this.indexes != null && this.indexes.length > 0) {
-            Integer[] newIndexes = validRowIndexes.stream().map(i -> this.indexes[i]).toArray(Integer[]::new);
+        if (hasIndex()) {
+            Integer[] newIndexes = validRowIndexes.stream().map(i -> this.getIndexes()[i]).toArray(Integer[]::new);
             return new DataFrame<>(filteredContent, newIndexes, classParameterH, classParameterT);
         } else {
             return new DataFrame<>(filteredContent, classParameterH, classParameterT);
         }
     }
-
-
+}
